# opendeclaro

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
opendeclaro/: __init__.py  main.py
opendeclaro-web/backend/: main.py
opendeclaro-web/backend/app/: main.py
opendeclaro-web/backend/app/api/: utils.py
opendeclaro-web/backend/app/api/templates/: form.html  response.html  table.html
opendeclaro-web/backend/app/app/: main.py  utils.py
opendeclaro/degiro/: __init__.py  config.py  dataprep.py  dataset.py  portfolio.py  prepare.py  returns.py  stocks.py  utils.py
opendeclaro/ibkr/: config.py  prepare.py
tests/: __init__.py  test_degiro_returns.py  test_opendeclaro.py
